--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.yutons.notp</groupId>
-    <artifactId>notp-generator</artifactId>
+    <artifactId>notp4j</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
