feat(core): 支持 SM3 算法

--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,11 @@
             <version>5.9.0</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk18on</artifactId>
+            <version>1.78</version>
+        </dependency>
     </dependencies>
 </project>
